add_library(macros_lib STATIC macros.cpp test_order_list_erase.cpp)

add_executable(test_new_order test_new_order.cpp)
add_executable(test_order_list_find test_order_list_find.cpp)
add_executable(test_order_list_erase test_order_list_erase.cpp)
target_link_libraries(test_new_order DTS_91896_lib macros_lib)
target_link_libraries(test_order_list_erase DTS_91896_lib macros_lib)
target_link_libraries(test_order_list_find DTS_91896_lib macros_lib)

add_test(NAME test_new_order COMMAND test_new_order)
add_test(NAME test_order_list_erase COMMAND test_order_list_erase)
add_test(NAME test_order_list_find COMMAND test_order_list_find)