add_library(macros_lib STATIC macros.cpp)

add_executable(test_new_order test_new_order.cpp)
add_executable(test_order_price test_order_price.cpp)
add_executable(test_order_list_push test_order_list_push.cpp)
add_executable(test_order_list_find test_order_list_find.cpp)
add_executable(test_order_list_erase test_order_list_erase.cpp)
add_executable(test_import_export_orders test_import_export_orders.cpp)
add_executable(test_menu test_menu.cpp)
add_executable(test_import_export_menu test_import_export_menu.cpp)
add_executable(test_utils test_utils.cpp)
target_link_libraries(test_new_order DTS_91896_core macros_lib)
target_link_libraries(test_order_price DTS_91896_core macros_lib)
target_link_libraries(test_order_list_push DTS_91896_core macros_lib)
target_link_libraries(test_order_list_find DTS_91896_core macros_lib)
target_link_libraries(test_order_list_erase DTS_91896_core macros_lib)
target_link_libraries(test_import_export_orders DTS_91896_core macros_lib)
target_link_libraries(test_menu DTS_91896_core macros_lib)
target_link_libraries(test_import_export_menu DTS_91896_core macros_lib)
target_link_libraries(test_utils DTS_91896_utils macros_lib)

add_test(NAME test_new_order COMMAND test_new_order)
add_test(NAME test_order_price COMMAND test_order_price)
add_test(NAME test_order_list_push COMMAND test_order_list_push)
add_test(NAME test_order_list_find COMMAND test_order_list_find)
add_test(NAME test_order_list_erase COMMAND test_order_list_erase)
add_test(NAME test_import_export_orders COMMAND test_import_export_orders)
add_test(NAME test_menu COMMAND test_menu)
add_test(NAME test_import_export_menu COMMAND test_import_export_menu)
add_test(NAME test_utils COMMAND test_utils)